tests/snapshots/svg_snapshots__theme_file.snap
---
source: tests/svg_snapshots.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="900" viewBox="0 0 1200 900">
<rect x="0" y="0" width="1200" height="900" fill="white"/>
<defs>
  <clipPath id="cp0"><rect x="92.00" y="122.00" width="880.00" height="716.00"/></clipPath>
  <clipPath id="cp1"><rect x="988.00" y="122.00" width="200.00" height="716.00"/></clipPath>
  <clipPath id="cp2"><rect x="12.00" y="12.00" width="1176.00" height="110.00"/></clipPath>
  <clipPath id="cp3"><rect x="68.00" y="838.00" width="928.00" height="50.00"/></clipPath>
  <clipPath id="cp4"><rect x="-12.00" y="110.00" width="104.00" height="740.00"/></clipPath>
</defs>
<g clip-path="url(#cp0)">
  <circle cx="232.00" cy="805.45" r="8.00" fill="rgba(215,66,66,1.0000)"/>
  <circle cx="432.00" cy="480.00" r="8.00" fill="rgba(66,215,66,1.0000)"/>
  <circle cx="632.00" cy="696.97" r="8.00" fill="rgba(215,66,66,1.0000)"/>
  <circle cx="832.00" cy="154.55" r="8.00" fill="rgba(66,66,215,1.0000)"/>
  <circle cx="332.00" cy="371.52" r="8.00" fill="rgba(66,215,66,1.0000)"/>
  <circle cx="732.00" cy="588.48" r="8.00" fill="rgba(66,66,215,1.0000)"/>
</g>
<g clip-path="url(#cp1)">
  <rect x="1001.00" y="222.40" width="14.00" height="14.00" fill="rgba(215,66,66,1.0000)"/>
  <text x="1032.00" y="229.40" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">setosa</text>
  <rect x="1001.00" y="286.84" width="14.00" height="14.00" fill="rgba(66,215,66,1.0000)"/>
  <text x="1032.00" y="293.84" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">versicolor</text>
  <rect x="1001.00" y="351.28" width="14.00" height="14.00" fill="rgba(66,66,215,1.0000)"/>
  <text x="1032.00" y="358.28" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">virginica</text>
</g>
<g clip-path="url(#cp2)">
  <text x="600.00" y="67.00" font-size="44" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">
    <tspan x="600.00" dy="0.0">Iris — file theme</tspan>
  </text>
</g>
<g clip-path="url(#cp3)">
  <rect x="92.00" y="837.50" width="880.00" height="1.00" fill="rgba(153,153,153,1.0000)"/>
  <rect x="131.50" y="835.00" width="1.00" height="6.00" fill="rgba(153,153,153,1.0000)"/>
  <text x="132.00" y="843.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">0</text>
  <rect x="331.50" y="835.00" width="1.00" height="6.00" fill="rgba(153,153,153,1.0000)"/>
  <text x="332.00" y="843.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">2</text>
  <rect x="531.50" y="835.00" width="1.00" height="6.00" fill="rgba(153,153,153,1.0000)"/>
  <text x="532.00" y="843.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">4</text>
  <rect x="731.50" y="835.00" width="1.00" height="6.00" fill="rgba(153,153,153,1.0000)"/>
  <text x="732.00" y="843.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">6</text>
  <rect x="931.50" y="835.00" width="1.00" height="6.00" fill="rgba(153,153,153,1.0000)"/>
  <text x="932.00" y="843.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">8</text>
  <text x="532.00" y="863.00" font-size="30" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">
    <tspan x="532.00" dy="0.0">x</tspan>
  </text>
</g>
<g clip-path="url(#cp4)">
  <rect x="91.50" y="122.00" width="1.00" height="716.00" fill="rgba(153,153,153,1.0000)"/>
  <rect x="89.00" y="804.95" width="6.00" height="1.00" fill="rgba(153,153,153,1.0000)"/>
  <text x="80.00" y="805.45" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">2</text>
  <rect x="89.00" y="587.98" width="6.00" height="1.00" fill="rgba(153,153,153,1.0000)"/>
  <text x="80.00" y="588.48" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">4</text>
  <rect x="89.00" y="371.02" width="6.00" height="1.00" fill="rgba(153,153,153,1.0000)"/>
  <text x="80.00" y="371.52" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">6</text>
  <rect x="89.00" y="154.05" width="6.00" height="1.00" fill="rgba(153,153,153,1.0000)"/>
  <text x="80.00" y="154.55" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">8</text>
  <text x="32.00" y="480.00" font-size="30" font-family="sans-serif" text-anchor="middle" dominant-baseline="central" fill="#000000" fill-opacity="1.000" transform="rotate(-90,32.00,480.00)">y</text>
</g>
</svg>
