tests/snapshots/svg_snapshots__theme_overrides.snap
---
source: tests/svg_snapshots.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="900" viewBox="0 0 1200 900">
<rect x="0" y="0" width="1200" height="900" fill="white"/>
<defs>
  <clipPath id="cp0"><rect x="150.00" y="110.00" width="784.00" height="640.00"/></clipPath>
  <clipPath id="cp1"><rect x="950.00" y="110.00" width="200.00" height="640.00"/></clipPath>
  <clipPath id="cp2"><rect x="50.00" y="50.00" width="1100.00" height="60.00"/></clipPath>
  <clipPath id="cp3"><rect x="118.00" y="750.00" width="848.00" height="100.00"/></clipPath>
  <clipPath id="cp4"><rect x="18.00" y="94.00" width="132.00" height="672.00"/></clipPath>
</defs>
<g clip-path="url(#cp0)">
  <circle cx="274.73" cy="720.91" r="8.00" fill="rgba(215,66,66,1.0000)"/>
  <circle cx="452.91" cy="430.00" r="8.00" fill="rgba(66,215,66,1.0000)"/>
  <circle cx="631.09" cy="623.94" r="8.00" fill="rgba(215,66,66,1.0000)"/>
  <circle cx="809.27" cy="139.09" r="8.00" fill="rgba(66,66,215,1.0000)"/>
  <circle cx="363.82" cy="333.03" r="8.00" fill="rgba(66,215,66,1.0000)"/>
  <circle cx="720.18" cy="526.97" r="8.00" fill="rgba(66,66,215,1.0000)"/>
</g>
<g clip-path="url(#cp1)">
  <rect x="963.00" y="199.00" width="14.00" height="14.00" fill="rgba(215,66,66,1.0000)"/>
  <text x="994.00" y="206.00" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">setosa</text>
  <rect x="963.00" y="256.60" width="14.00" height="14.00" fill="rgba(66,215,66,1.0000)"/>
  <text x="994.00" y="263.60" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">versicolor</text>
  <rect x="963.00" y="314.20" width="14.00" height="14.00" fill="rgba(66,66,215,1.0000)"/>
  <text x="994.00" y="321.20" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">virginica</text>
</g>
<g clip-path="url(#cp2)">
  <text x="600.00" y="80.00" font-size="40" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">
    <tspan x="600.00" dy="0.0">Iris — custom theme</tspan>
  </text>
</g>
<g clip-path="url(#cp3)">
  <rect x="150.00" y="749.50" width="784.00" height="1.00" fill="rgba(136,136,136,1.0000)"/>
  <rect x="185.14" y="747.00" width="1.00" height="6.00" fill="rgba(136,136,136,1.0000)"/>
  <text x="185.64" y="760.00" font-size="32" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">0</text>
  <rect x="363.32" y="747.00" width="1.00" height="6.00" fill="rgba(136,136,136,1.0000)"/>
  <text x="363.82" y="760.00" font-size="32" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">2</text>
  <rect x="541.50" y="747.00" width="1.00" height="6.00" fill="rgba(136,136,136,1.0000)"/>
  <text x="542.00" y="760.00" font-size="32" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">4</text>
  <rect x="719.68" y="747.00" width="1.00" height="6.00" fill="rgba(136,136,136,1.0000)"/>
  <text x="720.18" y="760.00" font-size="32" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">6</text>
  <rect x="897.86" y="747.00" width="1.00" height="6.00" fill="rgba(136,136,136,1.0000)"/>
  <text x="898.36" y="760.00" font-size="32" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">8</text>
  <text x="542.00" y="800.00" font-size="32" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">
    <tspan x="542.00" dy="0.0">Sepal length</tspan>
  </text>
</g>
<g clip-path="url(#cp4)">
  <rect x="149.50" y="110.00" width="1.00" height="640.00" fill="rgba(136,136,136,1.0000)"/>
  <rect x="147.00" y="720.41" width="6.00" height="1.00" fill="rgba(136,136,136,1.0000)"/>
  <text x="135.00" y="720.91" font-size="32" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">2</text>
  <rect x="147.00" y="526.47" width="6.00" height="1.00" fill="rgba(136,136,136,1.0000)"/>
  <text x="135.00" y="526.97" font-size="32" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">4</text>
  <rect x="147.00" y="332.53" width="6.00" height="1.00" fill="rgba(136,136,136,1.0000)"/>
  <text x="135.00" y="333.03" font-size="32" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">6</text>
  <rect x="147.00" y="138.59" width="6.00" height="1.00" fill="rgba(136,136,136,1.0000)"/>
  <text x="135.00" y="139.09" font-size="32" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">8</text>
  <text x="75.00" y="430.00" font-size="32" font-family="sans-serif" text-anchor="middle" dominant-baseline="central" fill="#000000" fill-opacity="1.000" transform="rotate(-90,75.00,430.00)">Sepal width</text>
</g>
</svg>
