tests/snapshots/svg_snapshots__timeseries.snap
---
source: tests/svg_snapshots.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="900" viewBox="0 0 1200 900">
<rect x="0" y="0" width="1200" height="900" fill="white"/>
<defs>
  <clipPath id="cp0"><rect x="95.00" y="125.00" width="874.00" height="710.00"/></clipPath>
  <clipPath id="cp1"><rect x="985.00" y="125.00" width="200.00" height="710.00"/></clipPath>
  <clipPath id="cp2"><rect x="15.00" y="15.00" width="1170.00" height="110.00"/></clipPath>
  <clipPath id="cp3"><rect x="71.00" y="835.00" width="922.00" height="50.00"/></clipPath>
  <clipPath id="cp4"><rect x="-9.00" y="113.00" width="104.00" height="734.00"/></clipPath>
</defs>
<g clip-path="url(#cp0)">
  <polyline points="234.05,641.36 333.36,625.23 432.68,634.91 532.00,609.09 631.32,592.95 730.64,602.64 829.95,576.82" stroke="rgba(215,66,66,1.0000)" stroke-width="3.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="234.05,802.73 333.36,786.59 432.68,770.45 532.00,776.91 631.32,754.32 730.64,738.18 829.95,731.73" stroke="rgba(66,215,66,1.0000)" stroke-width="3.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="234.05,318.64 333.36,334.77 432.68,325.09 532.00,302.50 631.32,286.36 730.64,292.82 829.95,270.23" stroke="rgba(66,66,215,1.0000)" stroke-width="3.00" fill="none" stroke-linejoin="miter"/>
  <circle cx="234.05" cy="641.36" r="8.00" fill="rgba(215,66,66,1.0000)"/>
  <circle cx="333.36" cy="625.23" r="8.00" fill="rgba(215,66,66,1.0000)"/>
  <circle cx="432.68" cy="634.91" r="8.00" fill="rgba(215,66,66,1.0000)"/>
  <circle cx="532.00" cy="609.09" r="8.00" fill="rgba(215,66,66,1.0000)"/>
  <circle cx="631.32" cy="592.95" r="8.00" fill="rgba(215,66,66,1.0000)"/>
  <circle cx="730.64" cy="602.64" r="8.00" fill="rgba(215,66,66,1.0000)"/>
  <circle cx="829.95" cy="576.82" r="8.00" fill="rgba(215,66,66,1.0000)"/>
  <circle cx="234.05" cy="802.73" r="8.00" fill="rgba(66,215,66,1.0000)"/>
  <circle cx="333.36" cy="786.59" r="8.00" fill="rgba(66,215,66,1.0000)"/>
  <circle cx="432.68" cy="770.45" r="8.00" fill="rgba(66,215,66,1.0000)"/>
  <circle cx="532.00" cy="776.91" r="8.00" fill="rgba(66,215,66,1.0000)"/>
  <circle cx="631.32" cy="754.32" r="8.00" fill="rgba(66,215,66,1.0000)"/>
  <circle cx="730.64" cy="738.18" r="8.00" fill="rgba(66,215,66,1.0000)"/>
  <circle cx="829.95" cy="731.73" r="8.00" fill="rgba(66,215,66,1.0000)"/>
  <circle cx="234.05" cy="318.64" r="8.00" fill="rgba(66,66,215,1.0000)"/>
  <circle cx="333.36" cy="334.77" r="8.00" fill="rgba(66,66,215,1.0000)"/>
  <circle cx="432.68" cy="325.09" r="8.00" fill="rgba(66,66,215,1.0000)"/>
  <circle cx="532.00" cy="302.50" r="8.00" fill="rgba(66,66,215,1.0000)"/>
  <circle cx="631.32" cy="286.36" r="8.00" fill="rgba(66,66,215,1.0000)"/>
  <circle cx="730.64" cy="292.82" r="8.00" fill="rgba(66,66,215,1.0000)"/>
  <circle cx="829.95" cy="270.23" r="8.00" fill="rgba(66,66,215,1.0000)"/>
</g>
<g clip-path="url(#cp1)">
  <rect x="998.00" y="224.50" width="14.00" height="14.00" fill="rgba(215,66,66,1.0000)"/>
  <text x="1029.00" y="231.50" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">AAPL</text>
  <rect x="998.00" y="288.40" width="14.00" height="14.00" fill="rgba(66,215,66,1.0000)"/>
  <text x="1029.00" y="295.40" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">GOOG</text>
  <rect x="998.00" y="352.30" width="14.00" height="14.00" fill="rgba(66,66,215,1.0000)"/>
  <text x="1029.00" y="359.30" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">MSFT</text>
</g>
<g clip-path="url(#cp2)">
  <text x="600.00" y="70.00" font-size="48" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">
    <tspan x="600.00" dy="0.0">Stock Prices</tspan>
  </text>
</g>
<g clip-path="url(#cp3)">
  <rect x="95.00" y="834.50" width="874.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <rect x="134.23" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="134.73" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">0</text>
  <rect x="332.86" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="333.36" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">2</text>
  <rect x="531.50" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="532.00" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">4</text>
  <rect x="730.14" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="730.64" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">6</text>
  <rect x="928.77" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="929.27" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">8</text>
  <text x="532.00" y="860.00" font-size="36" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">
    <tspan x="532.00" dy="0.0">Day</tspan>
  </text>
</g>
<g clip-path="url(#cp4)">
  <rect x="94.50" y="125.00" width="1.00" height="710.00" fill="rgba(179,179,179,1.0000)"/>
  <rect x="92.00" y="802.23" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="802.73" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">50</text>
  <rect x="92.00" y="640.86" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="641.36" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">100</text>
  <rect x="92.00" y="479.50" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="480.00" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">150</text>
  <rect x="92.00" y="318.14" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="318.64" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">200</text>
  <rect x="92.00" y="156.77" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="157.27" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">250</text>
  <text x="35.00" y="480.00" font-size="36" font-family="sans-serif" text-anchor="middle" dominant-baseline="central" fill="#000000" fill-opacity="1.000" transform="rotate(-90,35.00,480.00)">Price</text>
</g>
</svg>
